Changed Wiki page sidebar style

--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -141,8 +141,8 @@
         <!--Sidebar-->
         <th:block th:replace="fragment/User/sidebar"></th:block>
 
-    </div><!--/row-->
-</div>
+    </div> <!--/.row row-offcanvas row-offcanvas-right-->
+</div> <!-- /.container -->
 
 <th:block th:replace="fragment/User/bottom">
 
