--- a/src/main/resources/templates/fragment/User/wiki/sidebar.html
+++ b/src/main/resources/templates/fragment/User/wiki/sidebar.html
@@ -1,5 +1,5 @@
 <!-- Wiki Sidebar -->
-<div class="col-xs-7 col-sm-3 col-md-3 sidebar sidebar-left sidebar-animate sidebar-md-show" xmlns:th="http://www.w3.org/1999/xhtml">
+<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
     <ul class="nav navbar-stacked">
         <div class="list-group">
             <a href="#" ng-repeat="wiki in wikiOutput" ng-click="displayWikiOutput(wiki)" class="list-group-item">
