Wiki page is complete

--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -270,3 +270,11 @@ body {
 input[type="file"] {
     display: none;
 }
+
+.wiki-page-title {
+    margin-top: 0;
+}
+
+.wiki-content {
+    padding-left: 0;
+}
