--- a/src/main/resources/templates/User/wiki.html
+++ b/src/main/resources/templates/User/wiki.html
@@ -3,42 +3,40 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" ng-app="messagingApp"
       ng-controller="userController" ng-controller="wikiController">
->
 
 <th:block th:replace="fragment/User/top"/>
 
 <script type="text/javascript" th:src="@{/js/wikiAngular.js}"></script>
-<!--<div>-->
-    <!--<th:block th:replace="fragment/User/wiki/sidebar"/>-->
-<!--</div>-->
+
+<th:block th:replace="fragment/User/modals"/>
 
 <div class="container">
     <div class="row row-offcanvas row-offcanvas-right">
         <div class="col-xs-12 col-sm-9">
-            <th:block th:replace="fragment/User/modals"/>
-            <h1 class="col-md-offset-2">Wiki Page
+            <h1 class="wiki-page-title">Wiki Page
                 <small>
-                    <button ng-if="editIsEnabled == false" class="btn btn-success"
-                            ng-click="setEditIsEnabledToTrue();">
+                    <button ng-if="editIsEnabled == false" class="btn btn-primary"
+                            ng-click="switchEditIsEnabled();">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit Page
                     </button>
                     <button ng-if="editIsEnabled == true" class="btn btn-success"
                             ng-click="sendChanges()">
-                        <span class="glyphicon glyphicon-floppy-disk"></span>
-                        Push changes
+                        <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Push changes
+                    </button>
+                    <button ng-if="editIsEnabled == true" class="btn btn-danger"
+                            ng-click="switchEditIsEnabled();">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Cancel
                     </button>
                 </small>
             </h1>
-            <div class="col-md-offset-2" ng-if="editIsEnabled == false">
+            <div class="col-xs-12 wiki-content" ng-if="editIsEnabled == false">
                 <pre ng-bind-html="content.wikiText | unsafe"></pre>
             </div>
-            <div ng-if="editIsEnabled == true">
-                <div class="form-group col-md-offset-2">
-                    <label for="comment">Edit Wiki:</label>
-            <textarea class="form-control not-resizable" rows="30" id="comment"
-                      ng-model="content.wikiText" ng-bind="content.wikiText">
-            </textarea>
-                </div>
+            <div class="form-group col-xs-12 wiki-content" ng-if="editIsEnabled == true">
+                <label for="comment">Edit Wiki:</label>
+                <textarea class="form-control not-resizable" rows="30" id="comment"
+                          ng-model="content.wikiText" ng-bind="content.wikiText">
+                </textarea>
             </div>
         </div> <!--/.col-xs-12.col-sm-9-->
 
