--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -282,3 +282,8 @@ input[type="file"] {
 #itoUserId, #ttoTeamId {
     display: none;
 }
+
+.img-thumbnail {
+    width: 80px;
+    height: 80px;
+}
