--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -283,7 +283,7 @@ input[type="file"] {
     display: none;
 }
 
-.img-thumbnail {
-    width: 80px;
-    height: 80px;
+.img-circle {
+    width: 50px;
+    height: 50px;
 }
