--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,29 +4,48 @@
 <th:block th:replace="fragment/top" th:remove="tag">
 </th:block>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-2 col-md-offset-5">
-            <form id="loginForm" th:action="@{/login}" method="POST">
-                <div class="form-group">
-                    <input id="username" name="username" type="text" class="form-control input-lg" placeholder="Email">
-                </div>
-                <div class="form-group">
-                    <input id="password" name="password" type="password" class="form-control input-lg"
-                           placeholder="Password">
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-primary btn-lg btn-block">Sign In</button>
-                </div>
-            </form>
-        </div>
-    </div>
+<!--<div class="container-fluid">-->
+    <!--<div class="row">-->
+        <!--<div class="col-md-2 col-md-offset-5">-->
+            <!--<form id="loginForm" th:action="@{/login}" method="POST">-->
+                <!--<div class="form-group">-->
+                    <!--<input id="username" name="username" type="text" class="form-control input-lg" placeholder="Email">-->
+                <!--</div>-->
+                <!--<div class="form-group">-->
+                    <!--<input id="password" name="password" type="password" class="form-control input-lg"-->
+                           <!--placeholder="Password">-->
+                <!--</div>-->
+                <!--<div class="form-group">-->
+                    <!--<button class="btn btn-primary btn-lg btn-block">Sign In</button>-->
+                <!--</div>-->
+            <!--</form>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="row">-->
+        <!--<div id="createAccount" class="col-md-2 col-md-offset-5">-->
+            <!--<a th:href="@{/register/index}">Don't have an account? Create one.</a>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
+
+<div class="container">
+
+    <form class="form-signin" id="loginForm" th:action="@{/login}" method="POST">
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <label for="username" class="sr-only">Email address</label>
+        <input id="username" name="username" type="text" class="form-control" placeholder="Email" required autofocus>
+        <label for="password" class="sr-only">Password</label>
+        <input id="password" name="password" type="password" class="form-control" placeholder="Password" required>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    </form>
+
     <div class="row">
         <div id="createAccount" class="col-md-2 col-md-offset-5">
-            <a th:href="@{/register/index}">Don't have an account? Create one.</a>
+            <p>Don't have an account? <a th:href="@{/register/index}">Create one.</a></p>
         </div>
     </div>
-</div>
+
+</div> <!-- /container -->
 
 <th:block th:replace="fragment/bottom" th:remove="tag">
 </th:block>
